API restructured
